# yahoo-fantasy-analyzer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
backend/: .env  403_l_84207_analysis.csv  403_l_84207_standings.csv  411_l_57375_analysis.csv  411_l_57375_standings.csv  419_l_34145_analysis.csv  419_l_34145_standings.csv  427_l_11181_analysis.csv  427_l_11181_standings.csv  453_l_32349_analysis.csv  465_l_34948_analysis.csv  465_l_34948_standings.csv  EXPORT_PLAYERS.md  GOOGLE_SHEETS_SETUP.md  cert.pem  debug_411_l_57375_season_2020.xml  debug_411_l_57375_season_2021.xml  debug_batch_api_response.xml  export_players.py  fantasy_hockey.db  key.pem  my_standings.csv  player_analysis.csv  requirements.txt  test_standings.csv  test_standings.py  test_standings_with_managers.csv  upload_to_sheets.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  yahoo_api.py
backend/data/: google_sheets_credentials.json  oauth_creds.json  user_tokens.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/.certs/: localhost-cert.pem  localhost-key.pem
frontend/src/: App.css  App.tsx
scripts/: sniff_projections.mjs
tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_config.py  test_models.py  test_optimizer.py  test_projections.py  test_scoring.py  test_writer.py
yfantasy/: __init__.py  auth.py  cache.py  client.py  config.py  dashboard.py  models.py  optimizer.py  projections.py  scoring.py  trade.py  waiver.py  writer.py
yfantasy/cli/: __init__.py  app.py  display.py  shell.py
(+25 files in other folders)
