[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfantasy"
version = "0.1.0"
description = "Yahoo Fantasy Sports CLI — roster optimizer, waiver wire, trade analyzer"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "yfpy>=17.0.0",
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
yfantasy = "yfantasy.cli.app:main"

[tool.setuptools.packages.find]
include = ["yfantasy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
